<resources>
    <string name="app_name">NextiaApp</string>
    <string name="registrarme"><u><b>Registrarme</b></u></string>
    <string name="no_account">No tengo cuenta.</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="forgot"><u><b>Olvide mi contraseña</b></u></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lo_quiero">LO QUIERO</string>
    <string name="logout">Cerrar Sesión</string>
</resources>